# platform.core.api.webapi-plugins

./: LICENSE  LICENSE.BSD  LICENSE.BSD-2.0  build.sh  plugins.json  tizen-wrt.gyp
bookmark/: bookmark_instance.h
calendar/: calendar-record.h  calendar.h  calendar_api.js  calendar_instance.h
calendar/js/: tizen.calendar.CalendarAlarm.js  tizen.calendar.CalendarAttendee.js  tizen.calendar.CalendarRecurrenceRule.js  tizen.calendar.Common.js  tizen.calendar.plugin
common/: common.gypi  dbus_operation.cc  dbus_operation.h  extension.cc  extension.h  logger.h
contact/: CMakeLists.txt  addressbook.cc  addressbook.h  contact-manager.h  contact-plugin.cpp  contact-util.h  contact_manager.cc  contact_manager.h  contact_util.cc  contact_util.h  person.cc  person.cpp  person.h
contact/js/: tizen.contact.Contact.js  tizen.contact.ContactDataStructures.js  tizen.contact.ContactManager.js  tizen.contact.Person.js  tizen.contact.plugin
datasync/: datasync_api.js  datasync_extension.cc  datasync_instance.cc  datasync_instance.h  datasync_log.h  datasync_manager.cc  datasync_manager.h  datasync_serialization.h  sync_info.h  sync_profile_info.cc  sync_statistics.cc
doc/: README.md  package.json
doc/html/: index.html
doc/src/: devel_package.md  guideline.md  implementation_cc.md  implementation_js.md  index.md  plugin_structure.md  tools.md  widl.md
exif/: CMakeLists.txt  ExifGPSLocation.cpp  ExifGPSLocation.h  ExifGPSTime.cpp  ExifInformation.cpp  ExifInformation.h  ExifManager.cpp  ExifManager.h  ExifManagerCallbacks.cpp  ExifTagSaver.h  ExifUtil.cpp  ExifUtil.h  JpegFile.h  plugin_config.cpp  plugin_config.h  plugin_initializer.cpp
messaging/: messaging.gyp  messaging_instance.cc  messaging_instance.h
messaging/old/: CMakeLists.txt  ChangeListenerContainer.cpp  ChangeListenerContainer.h  ConversationCallbackData.h  ConversationsChangeCallback.cpp  ConversationsChangeCallback.h  EmailManager.cpp  EmailManager.h  FoldersCallbackData.cpp  FoldersChangeCallback.h  JSMessage.cpp  JSMessageAttachment.cpp  JSMessageAttachment.h  JSMessageBody.h  JSMessageConversation.cpp  JSMessageService.h  JSMessageStorage.h  JSMessagingManager.cpp  Message.h  MessageAttachment.cpp  MessageAttachment.h  MessageBody.cpp  MessageCallbackUserData.h  MessageConversation.cpp  MessageConversation.h  MessageEmail.cpp  MessageSMS.h  MessageService.cpp  MessageService.h  MessageServiceEmail.h  MessageStorage.cpp  MessageStorage.h  MessageStorageEmail.cpp  MessageStorageShortMsg.h  MessagesCallbackUserData.cpp  MessagesCallbackUserData.h  MessagesChangeCallback.cpp  MessagesChangeCallback.h  MessagingDatabaseManager.cpp  MessagingManager.cpp  (+4 more)
messaging/old/DBus/: Connection.h  EmailSignalProxy.cpp  EmailSignalProxy.h  SyncProxy.cpp  SyncProxy.h
messaging/old/TestScripts/: addConversationsChangeListener_01.js  addMessagesChangeListener_01.js
packaging/: webapi-plugins.pc  webapi-plugins.pc.in  webapi-plugins.spec
power/: power_api.js  power_instance.cc  power_manager.cc  power_platform_proxy.cc
res/tvsounds/: back.pcm  cancel.pcm  del.pcm  enter.pcm  keypad.pcm  move.pcm  preparing.pcm  select.pcm  warning.pcm
src/: tizen-wrt.gyp
src/account/: account.gyp  account_api.js  account_extension.cc  account_extension.h  account_instance.cc  account_instance.h  account_manager.cc  account_manager.h
src/alarm/: alarm.gyp  alarm_api.js  alarm_extension.cc  alarm_extension.h  alarm_instance.cc  alarm_instance.h  alarm_manager.cc  alarm_manager.h  alarm_utils.cc  alarm_utils.h
src/application/: application.cc  application.gyp  application.h  application_api.js  application_certificate.cc  application_certificate.h  application_context.cc  application_context.h  application_control.cc  application_control.h  application_controldata.cc  application_controldata.h  application_extension.cc  application_extension.h  application_information.cc  application_information.h  application_instance.cc  application_instance.h  application_manager.cc  application_manager.h  application_metadata.cc  application_metadata.h  application_utils.cc  application_utils.h  requested_application_control.cc  requested_application_control.h
src/archive/: archive.gyp  archive_api.js  archive_callback_data.cc  archive_callback_data.h  archive_extension.cc  archive_extension.h  archive_file.cc  archive_file.h  archive_file_entry.cc  archive_file_entry.h  archive_instance.cc  archive_instance.h  archive_manager.cc  archive_manager.h  archive_utils.cc  archive_utils.h  defs.h  filesystem_file.cc  filesystem_file.h  filesystem_node.cc  filesystem_node.h  filesystem_path.cc  filesystem_path.h  un_zip.cc  un_zip.h  un_zip_extract_request.cc  un_zip_extract_request.h  zip.cc  zip.h  zip_add_request.cc  zip_add_request.h
src/badge/: badge.gyp  badge_api.js  badge_extension.cc  badge_extension.h  badge_instance.cc  badge_instance.h  badge_manager.cc  badge_manager.h
src/bluetooth/: bluetooth.gyp  bluetooth_adapter.cc  bluetooth_adapter.h  bluetooth_api.js  bluetooth_class.cc  bluetooth_class.h  bluetooth_device.cc  bluetooth_device.h  bluetooth_extension.cc  bluetooth_extension.h  bluetooth_gatt_service.cc  bluetooth_gatt_service.h  bluetooth_health_application.cc  bluetooth_health_application.h  bluetooth_health_channel.cc  bluetooth_health_channel.h  bluetooth_health_profile_handler.cc  bluetooth_health_profile_handler.h  bluetooth_instance.cc  bluetooth_instance.h  bluetooth_le_adapter.cc  bluetooth_le_adapter.h  bluetooth_le_device.cc  bluetooth_le_device.h  bluetooth_privilege.cc  bluetooth_privilege.h  bluetooth_service_handler.cc  bluetooth_service_handler.h  bluetooth_socket.cc  bluetooth_socket.h  bluetooth_util.cc  bluetooth_util.h
src/bookmark/: bookmark.gyp  bookmark_api.js  bookmark_extension.cc  (+3 more)
tools/: WAPIOven.py  WebIDL.py  generate_api.py  js_minimize.py  mergejs.py
utils/: test.js  utils_api.js
(+805 files in other folders)
